# seqR

./: .Rbuildignore  .Renviron  .covrignore  .gitignore  .travis.yml  404.html  CMakeLists.txt  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE.html  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.md  appveyor.yml  authors.html  codecov.yml  configure.ac  cran-comments.md  cran_comments.html  cran_comments.md  index.html  pkgdown.yml
.github/workflows/: R-CMD-check.yaml
R/: CsgA.R  RcppExports.R  common.R  count_kmers.R  count_multimers.R  find_kmers.R  kmer.R  kmer_functions_provider.R  kmer_typed_functions.R  package.R  result_rbind.R  seqR_result.R  seq_gen.R  util.R  validators.R  zzz.R
articles/: features-overview.html  index.html
data/: CsgA.rda
docs/: 404.html  LICENSE-text.html  authors.html  index.html  pkgdown.yml
docs/articles/: features-overview.html  index.html  vignette.html
docs/news/: index.html
docs/reference/: add_kmer_if_not_exists.html  count_kmers.html  count_kmers_helper.html  count_kmers_larger_than_one.html  count_kmers_str.html  count_multimers.html  count_unigrams.html  create_kmer.html  fill_encoded_int_vector.html  fill_items_coding_maps.html  get_hash.html  get_hash_for_word.html  get_kmers.html  get_total_size_of_kmer.html  get_window_length.html  index.html  is_kmer_allowed.html  kmer-package.html  rbind_columnwise.html  seqR-package.html  update_kmers.html  update_kmers_with_alphabet.html
inst/: CITATION  WORDLIST
inst/include/: fast_modulo.h
man/: CsgA.Rd  add_kmer_if_not_exists.Rd  amino_acids.Rd  amino_letters.Rd  count_k_mers.Rd  count_kmer_num.Rd  count_kmers.Rd  count_kmers_hashed.Rd  count_kmers_helper.Rd  count_kmers_larger_than_one.Rd  count_kmers_str.Rd  count_mers.Rd  count_multimers.Rd  count_unigrams.Rd  create_kmer.Rd  decode_kmer.Rd  enumerate_integer_sequence.Rd  enumerate_numeric_sequence.Rd  enumerate_string_sequence.Rd  fill_encoded_int_vector.Rd  fill_items_coding_maps.Rd  generate_all_kmers.Rd  generate_random_alphabet.Rd  generate_random_seq.Rd  get_hash.Rd  get_hash_for_word.Rd  get_kmers.Rd  get_not_allowed_sequence_positions.Rd  get_total_size_of_kmer.Rd  get_window_length.Rd  is_kmer_allowed.Rd  kmer-package.Rd  rbind_columnwise.Rd  seqR-package.Rd  update_kmers.Rd  update_kmers_with_alphabet.Rd
man/img/: convert.sh
news/: index.html
reference/: CsgA.html  count_kmers.html  count_multimers.html  index.html  rbind_columnwise.html  seqR-package.html
src/: Makevars  Makevars.in  Makevars.win  RcppExports.cpp  alphabet_encoder.h  alphabet_encoder_proxy.cpp  app_conf.h  common_config.h  concrete_encoders.cpp  concrete_encoders.h  config_common.h  config_gapped_kmer_counting.h  config_kmer_counting.h  contiguous_kmer_counter.h  count_gapped_kmers_proxy.cpp  count_kmers_proxy.cpp  default_alphabet_encoder.h  dictionary.h  encoded_sequence.h  fun.cpp  gapped_kmer_counter.cpp  gapped_kmer_counter.h  hashing_proxy.cpp  input_to_internal_item_converter.cpp  input_to_internal_item_converter.h  input_to_string_item_converter.cpp  input_to_string_item_converter.h  kmer_counter.h  kmer_counting_common.h  kmer_counting_common_algorithm.h  kmer_counting_result.h  kmer_counts_manager.h  kmer_hash_indexer.cpp  kmer_hash_indexer.h  kmer_manager.h  kmer_position_info.h  kmer_strings_creator.cpp  kmer_strings_creator.h  kmer_task_config.h  kmer_task_param_dispatcher.h  (+32 more)
src/alphabet_encoder/: alphabet_encoder.h  concrete_encoders.cpp  concrete_encoders.h  default_alphabet_encoder.h  identity_alphabet_encoder.h
src/count_kmers_specific/: count_kmers_integer_matrix.h  count_kmers_numeric_matrix.h  count_kmers_specific.h  count_kmers_string_list.h  count_kmers_string_matrix.h  count_kmers_string_vector.h  count_kmers_tidysq.h  encoded_sequence_row.h  rmatrix_row_getter.h  safe_sequences_wrapper.h
src/dictionary/: EmilibHashMapWrapper.h  dict_iterator.h  dictionaries.h  dictionary.h  emilib_hash_map_wrapper.h  flat_hashmap_wrapper.h  iterator.h  iterator_wrapper.h  linear_list_dictionary.h  martinus_robin_hood_dictionary.h  ordered_map_wrapper.h  ska_bytell_hashmap_dictionary.h  (+8 more)
src/hash/: primes.h  (+13 more)
tests/: testthat.R
vignettes/: features-overview.Rmd  features_overview.Rmd  vignette.Rmd
(+46 files in other folders)
